@@ -1,20 +1,20 @@
 ---
 title: Ältere Versionen von AEM, CQ und CRX
 description: Dokumentationspakete für ältere Versionen von Adobe Experience Manager, CQ und CRX.
-translation-type: ht
-source-git-commit: c8e7f79be233c94d33b7605c73e586dce022412c
-workflow-type: ht
-source-wordcount: '773'
-ht-degree: 100%
+exl-id: c210eadb-58ec-4d40-ba72-5e4b11564510
+translation-type: tm+mt
+source-git-commit: 30feacd82cd68428b8c06044d6290f8f5328aa7a
+workflow-type: tm+mt
+source-wordcount: '793'
+ht-degree: 93%
 
 ---
-
 
 # Ältere Versionen von [!DNL Adobe Experience Manager], CQ und CRX {#older-versions-aem-cq-crx}
 
 ## Ältere Versionen der [!DNL Experience Manager]-Dokumentation {#older-version-aem-documentation}
 
-Die auf dieser Seite aufgeführten Versionen von [!DNL Experience Manager], CQ und CRX sind ausgelaufen und werden von Adobe nicht mehr offiziell verkauft. Die letzten Versionen der offiziellen Dokumentation für diese älteren Versionen sind zur Selbsthilfe verfügbar. Wir empfehlen ein Upgrade auf die neueste Version (derzeit [[!DNL Experience Manager] 6.5](https://experienceleague.adobe.com/docs/experience-manager-65.html?lang=de)).
+Die auf dieser Seite aufgeführten Versionen von [!DNL Experience Manager], CQ und CRX sind veraltet und werden nicht mehr offiziell von Adobe verkauft. Die letzten Versionen der offiziellen Dokumentation für diese älteren Versionen sind zur Selbsthilfe verfügbar. Wir empfehlen ein Upgrade auf die neueste Version (derzeit [[!DNL Experience Manager] 6.5](https://experienceleague.adobe.com/docs/experience-manager-65.html?lang=de)).
 
 >[!NOTE]
 >
@@ -29,9 +29,9 @@ Entscheiden Sie vor dem Download des Pakets, wer den Inhalt nutzen wird. Diese E
 
 >[!NOTE]
 >
->Benutzer müssen bei der [!DNL Experience Manager]-Instanz angemeldet sein, damit sie auf diesen Inhalt auf [!DNL Experience Manager] Author zugreifen können. Dieser Inhalt ist standardmäßig nicht auf AEM Publish (wie unter /libs vorhanden) zugänglich.
+>Benutzer müssen bei der [!DNL Experience Manager]-Instanz angemeldet sein, damit sie auf diesen Inhalt auf [!DNL Experience Manager] Author zugreifen zu können. Dieser Inhalt ist standardmäßig nicht auf AEM Publish (wie unter /libs vorhanden) zugänglich.
 
-## Software Distribution-Verzeichnisse {#software-distribution-locations}
+## Software-Verteilungsstandorte {#software-distribution-locations}
 
 Sie benötigen eine gültige Adobe ID:
 
@@ -41,11 +41,11 @@ Wenn Sie Hilfe beim Erstellen oder Verwalten Ihrer Adobe ID benötigen, [lesen S
 | [!DNL Experience Manager]-Version | Link zu Software Distribution |
 |:-----------:|:--------------------------------------------------:|
 | [!DNL Experience Manager] 6.2 | [AEM-DOCS-6.2 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/aem-docs-6-2.zip) |
-| [!DNL Experience Manager] 6.1 | [AEM-DOCS-6.1 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/aem-6-1.zip) |
+| [!DNL Experience Manager] 6.1 | [Herunterladen von AEM-DOCS-6.1 aus der Software-Verteilung](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/aem-6-1.zip) |
 | [!DNL Experience Manager] 6.0 | [AEM-DOCS-6.0 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/aem-docs-6-0.zip) |
 | [!DNL Experience Manager] 5.6.1 | [AEM-DOCS-5.6.1 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/aem-docs-5-6-1.zip) |
 | [!DNL Experience Manager] 5.6 | [AEM-DOCS-5.6 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/aem-docs-5-6.zip) |
-| CQ 5.5 | [CQ-DOCS-5.5 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=%2Fcontent%2Fsoftware-distribution%2Fen%2Fdetails.html%2Fcontent%2Fdam%2Faem%2Fpublic%2Fadobe%2Fpackages%2Faem-docs%2Faem-docs-5-5.zip) |
+| CQ 5.5 | [Herunterladen von CQ-DOCS-5.5 aus der Software-Verteilung](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=%2Fcontent%2Fsoftware-distribution%2Fen%2Fdetails.html%2Fcontent%2Fdam%2Faem%2Fpublic%2Fadobe%2Fpackages%2Faem-docs%2Faem-docs-5-5.zip) |
 | CQ 5.4 | [CQ-DOCS-5.4 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/aem-docs-5-4.zip) |
 | CQ 5.3 | [CQ-DOCS-5.3 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/aem-docs-5-3.zip) |
 | CRX 2.3 | [CRX-DOCS-2.3 von Software Distribution herunterladen](https://experience.adobe.com/#/downloads/content/software-distribution/en/aem.html?package=/content/software-distribution/en/details.html/content/dam/aem/public/adobe/packages/aem-docs/crx-docs-2-3.zip) |
@@ -71,13 +71,17 @@ Zur Installation eines Legacy-Dokumentationspakets muss [!DNL Experience Manager
 
 ### Installation des Pakets auf der lokalen Instanz {#install-package-local-instance}
 
+>[!NOTE]
+>
+>Für AEM 6.2 müssen Sie möglicherweise die lokale Instanz mit einer höheren maximalen Heap-Größe Beginn ausführen, z. B. mithilfe des folgenden Befehls: ` java -jar -XX:MaxPermSize=2048m aem-author.jar`
+
 1. Öffnen Sie die [!DNL Experience Manager]-Benutzeroberfläche. Geben Sie in einem Webbrowser Folgendes ein: `http://localhost:4502/`. Melden Sie sich als Administrator an.
 
 1. Wählen Sie **[!UICONTROL Tools]** (Werkzeuge) > **[!UICONTROL Deployment]** (Bereitstellung) > **[!UICONTROL Packages]** (Pakete).
 
 1. Wählen Sie in der Package Manager-UI die Option **[!UICONTROL Upload Package]** (Paket hochladen).
 
-1. Navigieren Sie zu dem Speicherort, an den Sie das Paket für AEM 5.6.1 (aem-docs-5-6-1.zip) heruntergeladen haben.
+1. Navigieren Sie zum Speicherort, an den Sie das AEM heruntergeladen haben.
 
 1. Wählen Sie das Paket aus und klicken Sie auf **[!UICONTROL OK]**.
 
@@ -87,7 +91,7 @@ Zur Installation eines Legacy-Dokumentationspakets muss [!DNL Experience Manager
 
 1. Wählen Sie im Bestätigungsdialogfeld erneut **[!UICONTROL Install]** (Installieren). Hinweis: Die Installation nimmt einige Minuten in Anspruch.
 
-1. Starten Sie in einem Webbrowser die Dokumentationsseite. Für das Beispiel AEM 5.6.1 lautet die URL: http://localhost:4502/libs/aem-docs/content/en/cq/5-6-1.html.
+1. Starten Sie in einem Webbrowser die Dokumentationsseite. Bei Verwendung des AEM 5.6.1-Beispiels lautet die URL: http://localhost:4502/libs/aem-docs/content/en/cq/5-6-1.html.
 
 ## Hilfe von der [!DNL Experience Manager]-Community {#get-help-from-aem-community}
 
